# alt-integration-cpp

./: .clang-format  .clang-tidy  .codecov.yml  .editorconfig  .gitignore  .gitmodules  .gitpod.yml  .lgtm.yml  .pre-commit-config.yaml  CMakeLists-rocksdb.txt.in  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  Doxyfile  LICENSE  LICENSE.md  MANIFEST.in  README.md  addblock_8hpp_source.html  addendorsement_8hpp_source.html  address_8h_source.html  address_8hpp_source.html  addvtb_8hpp_source.html  algorithm_8hpp_source.html  alt-util_8hpp_source.html  alt__block__addon_8hpp_source.html  alt__block__tree_8hpp_source.html  alt__block__tree__util_8hpp_source.html  alt__chain__params_8hpp_source.html  alt__command__group__store_8hpp_source.html  altblock_8h_source.html  altblock_8hpp_source.html  annotated.html  annotated_dup.js  arith__uint256_8hpp_source.html  array_8h_source.html  assert_8hpp_source.html  atv_8h_source.html  atv_8hpp_source.html  base58_8hpp_source.html  (+1430 more)
benchmark/: CMakeLists.txt  cache.cpp  keccakf800.cpp  mempool.cpp  progpow.cpp  stateless_validation.cpp  vbk_sig.cpp
fuzz/: .gitignore  CMakeLists.txt  EntitiesProviders.hpp  FuzzedDataProvider.hpp  address_deserialization_fuzz.cpp  altblockindex_deserialization_fuzz.cpp  btcblockindex_deserialization_fuzz.cpp  deserialization_fuzz.cpp  e2e_fuzz.cpp  fuzz.cmake  popdata_deserialization_fuzz.cpp  popstate_fuzz.cpp  value_sorted_map_fuzz.cpp  vbkblockindex_deserialization_fuzz.cpp
fuzz/e2e/: CMakeLists.txt  fuzzer.cpp  main.cpp  rand.cpp  rand.hpp  tree.cpp  tree.hpp
pypopminer/: .gitignore  CMakeLists.txt  README.md  entities.py  mock_miner_test.py  setup.py
pypopminer/pypopminer/: CMakeLists.txt  __init__.py  miner.cpp
pypopminer/src/: CMakeLists.txt  __init__.py  converters.hpp  entities.cpp  miner.cpp  miner_2.cpp  primitives.cpp
pypoptools/: .gitignore  CMakeLists.txt  README.md  __init__.py  setup.py
pypoptools/pypopminer/: CMakeLists.txt  __init__.py  converters.hpp  entities.cpp  miner.cpp  miner_2.cpp  mock_miner_test.py  primitives.cpp  vector.hpp
pypoptools/pypoptesting/: __init__.py  entities.py  load_test_runner.py  node.py  setup.py  test_framework.py  test_list.py  test_runner.py  tezt.py  util.py  vbitcoind_node.py
pypoptools/pypoptools/: CMakeLists.txt  __init__.py
pypoptools/tests/: mock_miner_test.py  random_miner_test.py  test_imports.py
src/: CMakeLists.txt  address.cpp  alt-util.cpp  altintegration.cpp  arith_uint256.cpp  base58.cpp  base59.cpp  bootstraps.cpp  checks.cpp  command_group_cache.cpp  config.cpp  consts.cpp  context.cpp  ct_params.hpp.in  hashutil.cpp  keystone_util.cpp  logger.cpp  mempool.cpp  mempool_prioritization.cpp  mempool_relations.cpp  mock_miner.cpp  mock_miner_2.cpp  params.cpp  pop_stateless_validator.cpp  popmanager.cpp  read_stream.cpp  serde.cpp  sha2.cpp  sha256.cpp  shautil.cpp  signutil.cpp  state_manager.cpp  stateless_validation.cpp  strutil.cpp  time.cpp  uint.cpp  validation_state.cpp  value_sorted_map.cpp  vblake.cpp  write_stream.cpp
src/abfi/: CMakeLists.txt
src/bfi/: CMakeLists.txt  asio-server.cpp  dummy.cpp
src/blockchain/: CMakeLists.txt  alt_block_addon.cpp  alt_block_tree.cpp  alt_chain_params_serializable.cpp  blockchain.cpp  blockchain_storage_util.cpp  btc_block_addon.cpp  btc_blockchain.cpp  btc_blockchain_util.cpp  btc_chain_params_serializable.cpp  commands.cpp  mempool_block_tree.cpp  vbk_block_addon.cpp  vbk_blockchain_util.cpp  vbk_chain_params_serializable.cpp
src/c/: CMakeLists.txt  bytestream.cpp  bytestream.hpp  config.cpp  config.hpp  entities_utils.cpp  mock_miner.cpp  mock_miner.hpp  pop_context.cpp  pop_context.hpp  storage.cpp  utils.cpp  validation_state.cpp  validation_state.hpp
src/crypto/: CMakeLists.txt  base58.cpp  base59.cpp  secp256k1.cpp  vblake.cpp  veriblock.cpp
src/entities/: CMakeLists.txt  address.cpp  altblock.cpp  altpoptx.cpp  atv.cpp  btcblock.cpp  btctx.cpp  coin.cpp  context.cpp  context_info_container.cpp  endorsement.cpp  endorsements.cpp  keystone_container.cpp  merkle_path.cpp  output.cpp  payloads.cpp  pop_payouts.cpp  pop_rewards.cpp  popdata.cpp  publication_data.cpp  test_case_entity.cpp  vbk_merkle_path.cpp  vbkblock.cpp  vbkpoptx.cpp  vbktx.cpp  vtb.cpp
src/logger/: CMakeLists.txt  logger.cpp  logger_default.cpp
src/pop/: CMakeLists.txt  alt-util.cpp  arith_uint256.cpp  base58.cpp  base59.cpp  bootstraps.cpp  command_group_cache.cpp  config.cpp  hashutil.cpp  keystone_util.cpp  logger.cpp  mempool.cpp  mempool_relations.cpp  mock_miner.cpp  pop_context.cpp  pop_stateless_validator.cpp  read_stream.cpp  serde.cpp  stateless_validation.cpp  strutil.cpp  time.cpp  trace.cpp  txfees.cpp  uint.cpp  validation_state.cpp  version.cpp  write_stream.cpp
src/rewards/: CMakeLists.txt  default_poprewards_calculator.cpp  poprewards.cpp  poprewards_cache.cpp  poprewards_calculator.cpp  poprewards_calculator_default.cpp
src/secp256k1/: CMakeLists.txt  ecdsa_impl.h  ecmult_impl.h  field_impl.h  libsecp256k1-config.h  scalar_8x32_impl.h  secp256k1.c  secp256k1.cpp
src/storage/: CMakeLists.txt  block_repository_rocks.cpp  blockchain_storage_util.cpp  endorsements_repository_inmem.cpp  payloads_index.cpp  payloads_provider.cpp  payloads_storage.cpp  pop_storage.cpp  (+2 more)
test/: CMakeLists.txt  alt-util_test.cpp  arith_uint256_test.cpp  base58_test.cpp  base59_test.cpp  comparator.cpp  config_btcblocks.txt  config_test.cpp  config_vbkblocks.txt  genesis_block_test.cpp  keystone_util_test.cpp  mempool_fixture.hpp  mempool_getpop_test.cpp  mempool_prioritization_test.cpp  mempool_test.cpp  merkle_pool_test.cpp  mock_miner_test.cpp  popmanager_test.cpp  secp256k1_test.cpp  serde_test.cpp  sha256_test.cpp  sha2_test.cpp  signutil_test.cpp  state_manager_test.cpp  stateless_validation_test.cpp  stateless_vtb_test.cpp  storage_test.cpp  streamutils_test.cpp  test_main.cpp  uint_test.cpp  uint_tests.cpp  validationstate_test.cpp  value_sorted_map_test.cpp  vblake_test.cpp
tools/: CMakeLists.txt  build_payouts_table.cpp  build_seedhash_epochs.cpp  filetoheader.cpp  get_btc_blockheaders.py
(+1954 files in other folders)
