link_libraries(${LIB_NAME})
include_directories(${CMAKE_CURRENT_LIST_DIR})
include_directories(${CMAKE_BINARY_DIR}/include)

add_subdirectory(e2e)
add_subdirectory(storage)
add_subdirectory(blockchain)
add_subdirectory(rewards)
add_subdirectory(third_party)
add_subdirectory(entities)
add_subdirectory(commands)

addtest(vblake_test vblake_test.cpp)
addtest(streamutils_test streamutils_test.cpp)
addtest(base58_test base58_test.cpp)
addtest(base59_test base59_test.cpp)
addtest(serde_test serde_test.cpp)
addtest(uint_test uint_test.cpp)
addtest(stateless_validation_test stateless_validation_test.cpp)
addtest(arith_uint256_test arith_uint256_test.cpp)
addtest(signutil_test signutil_test.cpp)
addtest(keystone_util_test keystone_util_test.cpp)
addtest(validationstate_test validationstate_test.cpp)
addtest(alt-util_test alt-util_test.cpp)
addtest(mempool_test mempool_test.cpp)
addtest(mempool_prioritization_test mempool_prioritization_test.cpp)
set_tests_properties(mempool_test PROPERTIES
        COST 10000 # 10 sec
        )